Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-test-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argocd-test
  template:
    metadata:
      labels:
        app: argocd-test
    spec:
      containers:
      - name: argocd-test-app
        image: memolg4250/argocd-test:v1
