Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-test-svc
spec:
  selector:
    app: argocd-test
  ports:
    - port: 8080
