Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   
  name: argocd-test-ingress
  version: "v2"
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:   
  rules:  
    - host: argocd-test.internal
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: argocd-test-svc
                port:   
                  number: 8080
